--- a/swreactnativeapp/android/app/src/main/AndroidManifest.xml
+++ b/swreactnativeapp/android/app/src/main/AndroidManifest.xml
@@ -20,13 +20,21 @@
         android:name=".MainActivity"
         android:label="@string/app_name"
         android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
+        android:screenOrientation="portrait"
         android:windowSoftInputMode="adjustResize">
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
       </activity>
-      <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
+      <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" 
+        android:screenOrientation="portrait"
+      />
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDN9aX6M_0lYfm14SDYmZTL3-SfYNtxCxQ"
+        />
+    
     </application>
 
 </manifest>
