--- a/swreactnativeapp/package.json
+++ b/swreactnativeapp/package.json
@@ -9,6 +9,7 @@
 	"dependencies": {
 		"react": "16.0.0",
 		"react-native": "0.50.4",
+		"react-native-maps": "^0.17.1",
 		"react-native-router-flux": "^4.0.0-beta.24",
 		"react-native-side-menu": "^1.1.3",
 		"react-native-vector-icons": "^4.4.2",
